rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_new_sketch_twice_using_same_plane.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch1 = sketch(on = XY) {
}
sketch001 = sketch(on = XY) {
}

