rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_origin_line_midpoint.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  line1 = line(
    start = [
      var -3.000000176289029,
      var -2.0000000435111507
    ],
    end = [
      var 3.0000002002890285,
      var 2.0000000595111507
    ],
  )
  midpoint(line1, point = ORIGIN)
}
