rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_point_origin_coincident_preserves_order_origin_first.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  point1 = point(at = [
    var 0.000000001000000082740371,
    var 0.000000002000000165480742
  ])
  coincident([ORIGIN, point1])
}
