rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_points_horizontal.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch001 = sketch(on = XY) {
  p0 = point(at = [var -2.23mm, var 3.9999999991mm])
  pf = point(at = [4, 4])
  horizontal([p0, pf])
}
